syntax = "proto3";
package pb;
option go_package = "./pb;pb";

message Car {
  string id = 1;
  string car_type = 2;
  string car_type_name = 3;
  string car_of_area = 4;
  string project_name = 5;
  string project_id = 6;
  double latitude = 7;
  double longitude = 8;
  int64 seat = 9;
  double distance = 10;
}